--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,3 +4,21 @@ sourceCompatibility = 1.11
 sourceSets.main.java.srcDirs = [ "src/" ]
 
 eclipse.project.name = appName + "-core"
+
+repositories {
+    mavenCentral()
+}
+
+def jmockitVersion = '1.49'
+
+dependencies {
+    testImplementation "org.jmockit:jmockit:$jmockitVersion"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testImplementation 'org.assertj:assertj-core:3.11.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+}
+
+test {
+    useJUnitPlatform()
+    jvmArgs "-javaagent:${classpath.find { it.name.contains("jmockit") }.absolutePath}"
+}
